--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.1
+  firebase_core: ^1.22.0
+  firebase_core_dart: ^1.0.1
+  firebase_auth: ^3.8.0
+  activout_firebase_options_selector: ^0.0.2
 
 dev_dependencies:
   flutter_test:
