--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core_dart: ^1.0.1
   firebase_auth: ^3.8.0
   activout_firebase_options_selector: ^0.0.2
+  cloud_firestore: ^3.4.7
 
 dev_dependencies:
   flutter_test:
