--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kontrola_serwisowa">
+   <!-- The INTERNET permission is required for development. Specifically,
+       flutter needs it to communicate with the running application
+       to allow setting breakpoints, to provide hot reload, etc.
+  -->
+  <uses-permission android:name="android.permission.INTERNET"/>
+
+  <!-- Provide required visibility configuration for API level 30 and above -->
+
+    <queries>
+        <!-- If your app opens https URLs -->
+        <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="https" />
+    </intent>
+  <!-- If your app makes calls -->
+    <intent>
+        <action android:name="android.intent.action.DIAL" />
+        <data android:scheme="tel" />
+     </intent>
+  <!-- If your sends SMS messages -->
+     <intent>
+        <action android:name="android.intent.action.SENDTO" />
+         <data android:scheme="smsto" />
+    </intent>
+  <!-- If your app sends emails -->
+    <intent>
+        <action android:name="android.intent.action.SEND" />
+        <data android:mimeType="*/*" />
+    </intent>
+    </queries>
+
+   
+   
+   
+   
+   
    <application
         android:label="kontrola_serwisowa"
         android:name="${applicationName}"
