--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^3.8.0
   activout_firebase_options_selector: ^0.0.2
   cloud_firestore: ^3.4.7
+  google_fonts: ^3.0.1
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
