--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.kontrola_serwisowa">
+    package="com.pawelzakrzewski.kontrola_serwisowa">
    <!-- The INTERNET permission is required for development. Specifically,
        flutter needs it to communicate with the running application
        to allow setting breakpoints, to provide hot reload, etc.
@@ -31,9 +31,7 @@
     </intent>
     </queries>
 
-   
-   
-   
+        
    
    
    <application
